force-app/main/default/objects/Freight_Rule__mdt/Freight_Rule__mdt.object-meta.xml
<CustomObject>
    <description>Simulated freight cost by region, warehouse, weight band and order value band.</description>
    <label>Freight Rule</label>
    <pluralLabel>Freight Rules</pluralLabel>
</CustomObject>