force-app/main/default/objects/Freight_Rule__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether the freight calculation considers this rule.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>