force-app/main/default/objects/Freight_Rule__mdt/fields/Freight_Amount__c.field-meta.xml
<CustomField>
    <fullName>Freight_Amount__c</fullName>
    <description>Flat freight charge applied when the rule matches. Amount in BRL: Custom Metadata does not support the Currency type, so the value is a plain number.</description>
    <label>Freight Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>