force-app/main/default/objects/Freight_Rule__mdt/fields/Freight_Percent__c.field-meta.xml
<CustomField>
    <fullName>Freight_Percent__c</fullName>
    <description>Freight charged as a percentage of order value, used instead of the flat amount.</description>
    <label>Freight Percent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>