force-app/main/default/objects/Freight_Rule__mdt/fields/Order_Value_From__c.field-meta.xml
<CustomField>
    <fullName>Order_Value_From__c</fullName>
    <description>Lower bound of the order value band, inclusive. Amount in BRL: Custom Metadata does not support the Currency type, so the value is a plain number.</description>
    <label>Order Value From</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>