force-app/main/default/objects/Freight_Rule__mdt/fields/Order_Value_To__c.field-meta.xml
<CustomField>
    <fullName>Order_Value_To__c</fullName>
    <description>Upper bound of the order value band, inclusive. Empty means no ceiling. Amount in BRL: Custom Metadata does not support the Currency type, so the value is a plain number.</description>
    <label>Order Value To</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>