force-app/main/default/objects/Freight_Rule__mdt/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <description>Destination region. Any matches every region.</description>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Any</fullName>
            </value>
            <value>
                <fullName>Norte</fullName>
            </value>
            <value>
                <fullName>Nordeste</fullName>
            </value>
            <value>
                <fullName>Centro-Oeste</fullName>
            </value>
            <value>
                <fullName>Sudeste</fullName>
            </value>
            <value>
                <fullName>Sul</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>