force-app/main/default/objects/Freight_Rule__mdt/fields/Warehouse_Code__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_Code__c</fullName>
    <description>Shipping warehouse the rule is restricted to. Empty matches any warehouse.</description>
    <label>Warehouse Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>