force-app/main/default/objects/Freight_Rule__mdt/fields/Weight_Band_From_Kg__c.field-meta.xml
<CustomField>
    <fullName>Weight_Band_From_Kg__c</fullName>
    <description>Lower bound of the weight band in kilograms, inclusive.</description>
    <label>Weight Band From (kg)</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>