force-app/main/default/objects/Freight_Rule__mdt/fields/Weight_Band_To_Kg__c.field-meta.xml
<CustomField>
    <fullName>Weight_Band_To_Kg__c</fullName>
    <description>Upper bound of the weight band in kilograms, inclusive. Empty means no ceiling.</description>
    <label>Weight Band To (kg)</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>